fixed content shifting issue for small widths

--- a/src/sass/post.scss
+++ b/src/sass/post.scss
@@ -2,7 +2,9 @@
 
 .post {
     padding: 1rem 1.5rem;
-    margin: 0 auto 10vh auto;
+    // margin: 0 auto 10vh auto;
+    margin-bottom: 10vh;
+
     min-width: 300px;
     width: 60%;
     max-width: 650px;
